Fix box-sizing on wraps

--- a/src/layouts/css/objects.wrap.css
+++ b/src/layouts/css/objects.wrap.css
@@ -5,6 +5,7 @@
  */
 
 .wrap {
+  box-sizing: initial;
   margin: 0 auto;
   max-width: 34rem;
 }
